# GFDL-VortexTracker

./: .gitignore  README.md
.github/workflows/: github_runtests_gnu.yml
code/: CMakeLists.txt
code/modulefile-setup/: analysis-setup.sh  gaea-setup.sh  hera-setup.sh  hercules-setup.sh  jet-setup.sh  orion-setup.sh  ppan-setup.sh  wcoss2-setup.sh
code/src/: machine-setup.sh  newcompile.sh  run-cmake.sh
code/src/support/: CMakeLists.txt
code/src/tracker/: CMakeLists.txt  gettrk_subroutines.f
code/src/tracker/test_tracker/: build_mslp_file.sh  build_testing_data.sh  cleanup.sh  create_big_mslp_field.f  create_mslp_data.py  create_small_mslp_field.f  create_testing_data.py  move_open_ncfile.sh  test_calccorr.F90  test_calcdist.F90  test_compute_rh_from_q.F90  test_distbear.F90  test_get_netcdf_real_type.F90  test_mslp.nc  test_open_ncfile.F90  test_rvcal.F90  testing_input_data.nc
docker/: RUNME.sh  tracker_leadtimes
docker/subscripts/: IOfiles.sh  compile.sh  inputdata_multiple.sh  inputdata_single.sh  ncvariables.sh  populatenamelist.sh  tcvitals.sh  variables.sh
exec/: gettrk.x  supvit.x  tave.x
python_scripts/: converttimes.py  getmslp.py
run/: 0318_runtracker.sh  RUNME.sh  TEST_runtracker_HFSM.sh  cait_edit_lew.sh  cleanworkdir.sh  cut_ecmwf_file_back_to_orig.sh  ecmwf.tracker_leadtimes  ecmwf_hgt_levs.txt  extrkr.sh  fort.11  fort.16  fort.31  fort.51  grib-runtracker.sh  grib2-runtracker.sh  hfsm_lew_run_v1.sh  jet_tingchi.sh  ncvariables.sh  newtingchi_run.sh  run_GenesisTracker_HAFSV2.1M_2025_RT.sh  run_ecmwf_ez.sh  run_hfsc_track_2025.sh  run_hfsm_track_2025.sh  tcvit_logfile.2022.txt  tcvitals.sh  tingchi_run.sh  tracker_leadtimes  tshield_docker.sh  variables.sh
run/docker/: use-docker.sh
run/grib/: hgt_levs.txt  leadtimes.txt  run-grib.sh  tmp_levs.txt  vortex_tilt_levs.txt
run/grib/subscripts/: IOfiles_grib.sh  cleanup_grib.sh  compile_grib.sh  grib_env_vars.sh  multi_grib.sh  (+3 more)
run/netcdf/: leadtimes.txt  run-ncdf.sh
run/subscripts/: cleanworkdir.sh  inputdata.sh  populatenamelist.sh
src/support/: CMakeLists.txt
src/tracker/: CMakeLists.txt  gettrk_main.F90  gettrk_main.f  gettrk_modules.F90  gettrk_subroutines.f  module_waitfor.F90
timeconversion_netcdf/: converttimes.py  printtimes.py
(+9 files in other folders)
